change log content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="texts">
           <p class="log_txt">
-            2022/6/2: Ver.2.0, Add a settings that are "Absent" and "QRCode"
+            2022/6/2: Add a settings that are "Absent" and "QRCode"
           </p>
           <p class="log_txt">
             2022/6/3: fixed bugs
