change log content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             2022/6/2: Add a settings that are "Absent" and "QRCode"
           </p>
           <p class="log_txt">
-            2022/6/3: fixed bugs
+            2022/6/3: fixed bugs that absent function.
           </p>
         </div>
       </div>
