change log contents

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
         <div class="texts">
           <p class="log_txt">
-            2022/6/2: Add a settings that are "Absent" and "QRCode"
+            2022/6/2: Add a settings,"Absent" and "QRCode"
           </p>
           <p class="log_txt">
-            2022/6/3: fixed bugs that absent function.
+            2022/6/3: fixed bugs, absent function.
           </p>
         </div>
       </div>
