--- a/index.html
+++ b/index.html
@@ -1,75 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Matching</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="input.css" />
+    <link rel="stylesheet" href="setting/absent.css" />
+    <link rel="stylesheet" href="setting/qrcode.css" />
+    <link rel="stylesheet" href="setting/log.css" />
+    <link rel="stylesheet" href="setting/setting.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Matching</title>
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="input.css" />
-  <link rel="stylesheet" href="setting/absent.css" />
-  <link rel="stylesheet" href="setting/qrcode.css" />
-  <link rel="stylesheet" href="setting/log.css" />
-  <link rel="stylesheet" href="setting/setting.css" />
+    <script src="https://cozmo.github.io/jsQR/jsQR.js"></script>
+  </head>
 
-  <script src="https://cozmo.github.io/jsQR/jsQR.js"></script>
-</head>
+  <style></style>
 
-<style></style>
-
-<body>
-  <div class="setting_display">
-    <div class="close_button">close</div>
-    <div class="setting">
-      <div class="absent_diplay">
-        <p class="p1">Absent?</p>
-        <div class="absent_numbers"></div>
-      </div>
-      <div class="qr_diplay">
-        <p class="p1">need names?</p>
-        <label class="qr_button">
-          <input type="file" accept="image/*" id="qr" />import QRCode
-        </label>
-      </div>
-      <div class="log_display">
-        <div class="log_button">
-          Log
+  <body>
+    <div class="setting_display">
+      <div class="close_button">close</div>
+      <div class="setting">
+        <div class="absent_diplay">
+          <p class="p1">Absent?</p>
+          <div class="absent_numbers"></div>
         </div>
-        <div class="texts">
-          <p class="log_txt">
-            2022/6/2: Add a settings that are "Absent" and "QRCode"
-          </p>
-          <p class="log_txt">
-            2022/6/3: fixed bugs that absent function.
-          </p>
+        <div class="qr_diplay">
+          <p class="p1">need names?</p>
+          <label class="qr_button">
+            <input type="file" accept="image/*" id="qr" />import QRCode
+          </label>
+        </div>
+        <div class="log_display">
+          <div class="log_button">Log</div>
+          <div class="texts">
+            <p class="log_txt">
+              2022/6/2: Add a settings that are "Absent" and "QRCode"
+            </p>
+            <p class="log_txt">2022/6/3: fixed bugs that absent function.</p>
+          </div>
+        </div>
+        <canvas id="canvas" width="500" height="500"></canvas>
+      </div>
+    </div>
+    <div class="blackout"></div>
+    <div class="effect">
+      <p class="title">Matching</p>
+      <div class="cp_iptxt">
+        <input class="ef" type="number" value="10" />
+        <label>人数</label>
+        <span class="focus_line"></span>
+      </div>
+      <div class="display">
+        <div class="buttons">
+          <div class="bt shuffle_button">Shuffle</div>
+          <div class="bt setting_button">Setting</div>
+        </div>
+        <div class="boxes">
+          <div class="shuffle_display"></div>
+          <div class="shuffle_display"></div>
         </div>
       </div>
-      <canvas id="canvas" width="500" height="500"></canvas>
     </div>
-  </div>
-  <div class="blackout"></div>
-  <div class="effect">
-    <p class="title">Matching</p>
-    <div class="cp_iptxt">
-      <input class="ef" type="number" value="10" />
-      <label>人数</label>
-      <span class="focus_line"></span>
-    </div>
-    <div class="display">
-      <div class="buttons">
-        <div class="bt shuffle_button">Shuffle</div>
-        <div class="bt setting_button">Setting</div>
-      </div>
-      <div class="boxes">
-        <div class="shuffle_display"></div>
-        <div class="shuffle_display"></div>
-      </div>
-    </div>
-  </div>
-  <script type="text/javascript" src="shuffle/shuffle.js"></script>
-  <script type="text/javascript" src="setting/absent.js"></script>
-  <script type="text/javascript" src="setting/log.js"></script>
-  <script type="text/javascript" src="setting/qrcode.js"></script>
-</body>
-
+    <script type="text/javascript" src="shuffle/shuffle.js"></script>
+    <script type="text/javascript" src="setting/absent.js"></script>
+    <script type="text/javascript" src="setting/log.js"></script>
+    <script type="text/javascript" src="setting/qrcode.js"></script>
+  </body>
 </html>
