change log contents

--- a/index.html
+++ b/index.html
@@ -30,24 +30,14 @@
             <input type="file" accept="image/*" id="qr" />import QRCode
           </label>
         </div>
-<<<<<<< HEAD
         <div class="log_display">
           <div class="log_button">Log</div>
           <div class="texts">
             <p class="log_txt">
-              2022/6/2: Add a settings that are "Absent" and "QRCode"
+              2022/6/2: Add a settings, "Absent" and "QRCode"
             </p>
-            <p class="log_txt">2022/6/3: fixed bugs that absent function.</p>
+            <p class="log_txt">2022/6/3: fixed bugs, absent function.</p>
           </div>
-=======
-        <div class="texts">
-          <p class="log_txt">
-            2022/6/2: Add a settings,"Absent" and "QRCode"
-          </p>
-          <p class="log_txt">
-            2022/6/3: fixed bugs, absent function.
-          </p>
->>>>>>> 05b448d42bb25ff2c21874c84f10e19c657904a2
         </div>
         <canvas id="canvas" width="500" height="500"></canvas>
       </div>
