delete open of about_display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p class="p2">You set less than 0, right?</p>
       <div class="close_button error_close_button">close</div>
     </div>
-    <div class="about_display open">
+    <div class="about_display">
       <div class="close_button about_close_button">close</div>
       <!-- <p class="p1">About</p> -->
       <div class="content">
