--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="p2">[2022/6/5] Add a function: error message.</p>
       </div>
       <a href="https://github.com/CRCRexe/Matching.git">
-        <p class="p1">Source</p>
+        <p class="p1">Source Code</p>
       </a>
     </div>
     <div class="setting_display">
