--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="p2">[2022/6/2] Add settings: "Absent" and "QRCode".</p>
         <p class="p2">[2022/6/3] Fixed bugs: absent function.</p>
         <p class="p2">[2022/6/5] Add a function: error message.</p>
-        <p class="p2">[2022/6/5] importing QRCode, numbers are changed to names</p>
+        <p class="p2">[2022/6/5] importing QRCode, numbers are changed to names.</p>
       </div>
       <a href="https://github.com/CRCRexe/Matching.git">
         <p class="p1">Source Code</p>
