--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
           <div class="absent_numbers"></div>
         </div>
         <div class="qr_diplay">
-          <p class="p1">need names?</p>
+          <p class="p1">QRCode</p>
           <div class="qr_buttons">
             <label class="qr_button qr_button_0">
-              <input type="file" accept="image/*" id="qr" />import QRCode
+              <input type="file" accept="image/*" id="qr" /><i class='bx bx-import'style='margin-right:5px'></i>import
             </label>
-            <div class="qr_button qr_button_1">select QRCode</div>
+            <div class="qr_button qr_button_1"><i class='bx bx-select-multiple' style='margin-right:5px'></i>select</div>
           </div>
         </div>
         <canvas id="canvas" width="500" height="500"></canvas>
